--- a/client/src/GameJoin.css
+++ b/client/src/GameJoin.css
@@ -101,3 +101,69 @@
     font-family: pierSansBold;
     font-size: 20px;
 }
+
+.readyButton{
+    background-color: #52D273;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    width: 40%;
+    border-radius: 3px;
+    position: relative;
+    top: 70px;
+    margin-top: -35px;
+    height: 45px;
+    font-size: 21px;
+    font-family: pierSansRegular;
+    transition: all 0.1s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #333333;
+    user-select: none;
+}
+
+.readyButton:hover{
+    transform: scale(1.01);
+}
+
+.unReady{
+    background-color: #B3B8BC;
+}
+
+.startButton{
+    width: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 40px;
+    border-radius: 3px;
+    cursor: pointer;
+    transition: all 0.1s;
+    background-color: #52D273;
+    margin-left: auto;
+    margin-right: 20px;
+    user-select: none;
+}
+
+.startButton p {
+    font-family: PierSansBold;
+    font-size: 20px;
+    color: #333333;
+    user-select: none;
+}
+
+.startButtonNotReady{
+    filter: opacity(0.5);
+    cursor: default;
+}
+
+.startButtonNotReady:hover{
+    transform: scale(1);
+}
+
+#startContainer{
+    width: 100%;
+    height: fit-content;
+    display: flex;
+}
