--- a/client/src/EndOfGame.css
+++ b/client/src/EndOfGame.css
@@ -17,10 +17,21 @@
 }
 
 #buttonBottomContainer{
-    display: flex;
-    align-items: center;
     position: absolute;
     bottom: 75px;
+}
+
+#buttonBottomWrapper{
+    display: flex;
+    align-items: center;
+}
+
+#endGameAlertText{
+    text-align: center;
+    margin-bottom: 40px;
+    color: #E5C451;
+    font-size: 25px;
+    /* font-family: pierSansBold; */
 }
 
 .gameWonbuttonContainer{
@@ -48,4 +59,8 @@
 
 .gameWonbuttonContainer:not(:first-child){
     margin-left: 30px;
+}
+
+#endGameAlertTextHide{
+    display: none;
 }
