--- a/client/src/Game.css
+++ b/client/src/Game.css
@@ -66,9 +66,16 @@
 
 .dice{
     width: 180px;
+    height: 180px;
 }
 
 .dice:not(:first-child){
     margin-left: 100px;
 }
 
+#doubleText{
+    color: #E5C451;
+    text-align: center;
+    font-size: 20px;
+    margin-top: 10px;
+}
