--- a/client/src/EndOfGame.css
+++ b/client/src/EndOfGame.css
@@ -1,4 +1,4 @@
-#endOfGame{
+#endOfGame, #computerGameEnd, #localmultiplayerend{
     display: flex;
     flex-direction: column;
     align-items: center;
