--- a/client/src/Game.css
+++ b/client/src/Game.css
@@ -1,4 +1,4 @@
-#game{
+#game, #vscomputergame, #localmultiplayergame{
     padding-top: 20px;
     display: flex;
     flex-direction: column;
@@ -19,7 +19,10 @@
     margin-left: auto;
     margin-right: auto;
     color: #E5C451;
-    text-align: center;
+    /* text-align: center; */
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, 0);
     font-family: pierSansBold;
 }
 
