--- a/client/src/GameHome.css
+++ b/client/src/GameHome.css
@@ -69,7 +69,8 @@
 #playAgainstTheComputerText{
     color: #46BCDE;
     cursor: pointer;
-    margin-top: 45px;
+    position: relative;
+    top: 40px;
 }
 
 @media only screen and (max-width: 800px){
