--- a/client/src/OnlineHome.css
+++ b/client/src/OnlineHome.css
@@ -1,4 +1,4 @@
-#onlinehome{
+#onlinehome, #localmultiplayerhome{
     height: 100%;
 }
 
@@ -17,7 +17,7 @@
     display: none;
 }
 
-#gameIdInput{
+#gameIdInput, #player2nameInput{
     background-color: #333333;
     border: none;
     padding-left: 10px;
@@ -39,7 +39,7 @@
 }
 
 @media only screen and (max-width: 601px){
-    #gameIdInput{
+    #gameIdInput, #player2nameInput{
         width: 90vw;
     }
 }
