--- a/client/src/TopTable.css
+++ b/client/src/TopTable.css
@@ -64,3 +64,14 @@ td{
     position: relative;
     top: 40px;
 }
+
+#noDatatableText{
+    /* text-align: center; */
+    position: relative;
+    left: 50%;
+    font-size: 20px;
+    /* margin-left: auto;
+    margin-right: auto; */
+    color: #E5C451;
+    /* transform: translate(-50%, 0); */
+}
