--- a/client/src/Game.css
+++ b/client/src/Game.css
@@ -63,7 +63,7 @@
 #diceContainer{
     display: flex;
     align-items: center;
-    margin-top: 50px;
+    margin-top: 40px;
     margin-bottom: 80px;
 }
 
@@ -81,4 +81,9 @@
     text-align: center;
     font-size: 20px;
     margin-top: 10px;
+    height: 20px;
+}
+
+.gameButtonNotActive{
+    opacity: 0;
 }
